# aspect-cli-plugin-python

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  buf.gen.yaml
.aspect/cli/: config.yaml
cli/core/bazel/action_cache/: action_cache_pb2.py
cli/core/bazel/buildeventstream/: build_event_stream_pb2.py
cli/core/bazel/command_line/: command_line_pb2.py
cli/core/bazel/failure_details/: failure_details_pb2.py
cli/core/bazel/invocation_policy/: invocation_policy_pb2.py
cli/core/bazel/options/: option_filters_pb2.py
cli/core/bazel/packages_metrics/: package_load_metrics_pb2.py
cli/core/pkg/plugin/sdk/v1alpha4/proto/: plugin_pb2.py
plugin-python/: BUILD.bazel  launch.sh  launch.sh.sha256  plugin.py  plugin.py.sha256  requirements.txt
plugin-python/cli/core/bazel/action_cache/: BUILD.bazel  action_cache_pb2.py
plugin-python/cli/core/bazel/buildeventstream/: BUILD.bazel  build_event_stream_pb2.py
plugin-python/cli/core/bazel/command_line/: BUILD.bazel  command_line_pb2.py
plugin-python/cli/core/bazel/failure_details/: BUILD.bazel  failure_details_pb2.py
plugin-python/cli/core/bazel/invocation_policy/: BUILD.bazel  invocation_policy_pb2.py
plugin-python/cli/core/bazel/options/: BUILD.bazel  option_filters_pb2.py
plugin-python/cli/core/bazel/packages_metrics/: BUILD.bazel  package_load_metrics_pb2.py
plugin-python/proto/: BUILD.bazel  aspect_plugin_pb2.py  aspect_plugin_pb2_grpc.py
